--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "my-module",
-  "version": "1.0.0",
+  "name": "nuxt-meilisearch",
+  "version": "0.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xlanex6/nuxt-meilisearch.git"
+  },
+  "author": "Alex Duval",
+  "contributors": [],
   "type": "module",
   "exports": {
     ".": {
@@ -18,15 +24,34 @@
     "prepack": "nuxt-module-build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground"
+    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
+    "docs": "cd docs && yarn dev",
+    "release": "nuxt-module-build && standard-version && git push --follow-tags && npm publish",
+    "lint": "eslint --ext .js,.ts,.vue"
   },
   "dependencies": {
     "@nuxt/kit": "^3.0.0-rc.2"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
+    "standard-version": "^9.3.2",
     "@nuxtjs/eslint-config-typescript": "latest",
     "eslint": "latest",
-    "nuxt": "^3.0.0-rc.1"
-  }
+    "nuxt": "^3.0.0-rc.2"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "homepage": "https://github.com/xlanex6/nuxt-meilisearch#readme",
+  "directories": {
+    "doc": "docs",
+    "example": "playground"
+  },
+  "keywords": [
+    "meilisearch",
+    "search",
+    "vue-instantsearch",
+    "nuxt",
+    "module"
+  ]
 }
