--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "^0.7.0",
-    "@nuxt/kit": "^3.0.0-rc.2"
+    "@nuxt/kit": "^3.0.0-rc.2",
+    "vue-instantsearch": "^4.3.3"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
