--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,26 @@
 {
-  "extends": "./playground/.nuxt/tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "skipLibCheck": true,
+    "strict": false,
+    "allowJs": true,
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "types": [
-      "./playground/types"
-    ]
-  }
+      "node",
+      "@nuxt/kit"
+    ],
+    "paths": {
+      "#app": [
+        "./node_modules/nuxt/dist/app"
+      ]
+    }
+  },
+  "include": [
+    "src"
+  ]
 }
