--- a/package.json
+++ b/package.json
@@ -25,21 +25,21 @@
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
-    "docs": "cd docs && yarn dev",
+    "docs": "cd docs && pnpm dev",
     "release": "nuxt-module-build && standard-version && git push --follow-tags && npm publish",
     "lint": "eslint --ext .js,.ts,.vue"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "^0.7.0",
-    "@nuxt/kit": "^3.0.0-rc.2",
-    "vue-instantsearch": "^4.3.3"
+    "@meilisearch/instant-meilisearch": "0.7.0",
+    "@nuxt/kit": "3.0.0-rc.2",
+    "vue-instantsearch": "4.3.3"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "eslint": "latest",
-    "nuxt": "^3.0.0-rc.2",
-    "standard-version": "^9.3.2"
+    "nuxt": "3.0.0-rc.2",
+    "standard-version": "9.3.2"
   },
   "publishConfig": {
     "access": "public"
