--- a/docs/content/settings.json
+++ b/docs/content/settings.json
@@ -1,6 +1,6 @@
 {
   "title": "Nuxt Meilisearch",
-  "url": "pending",
+  "url": "https://nuxt-meilisearch-docs.netlify.app",
   "github": "xlanex6/nuxt-meilisearch",
   "twitter": "xlanex6"
 }
