--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
     "lint": "eslint --ext .js,.ts,.vue"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "0.7.0",
-    "@nuxt/kit": "3.0.0-rc.2",
-    "instantsearch.css": "^7.4.5",
-    "vue-instantsearch": "4.3.3"
+    "@meilisearch/instant-meilisearch": "0.8.0",
+    "@nuxt/kit": "3.0.0-rc.5",
+    "instantsearch.css": "7.4.5",
+    "meilisearch": "0.27.0",
+    "vue-instantsearch": "4.4.0"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxtjs/eslint-config-typescript": "latest",
     "eslint": "latest",
-    "nuxt": "3.0.0-rc.2",
-    "standard-version": "9.3.2"
+    "nuxt": "3.0.0-rc.5",
+    "standard-version": "9.5.0"
   },
   "publishConfig": {
     "access": "public"
