--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "0.9.0",
-    "@nuxt/kit": "3.0.0-rc.12",
+    "@nuxt/kit": "3.0.0",
     "instantsearch.css": "7.4.5",
-    "meilisearch": "0.29.0",
+    "meilisearch": "0.29.1",
     "vue-instantsearch": "4.6.0"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
-    "@nuxt/schema": "3.0.0-rc.12",
+    "@nuxt/schema": "3.0.0",
     "@nuxtjs/eslint-config-typescript": "latest",
     "eslint": "latest",
-    "nuxt": "3.0.0-rc.12",
+    "nuxt": "3.0.0",
     "standard-version": "9.5.0"
   },
   "publishConfig": {
