--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "0.10.1",
-    "@nuxt/kit": "3.0.0",
-    "instantsearch.css": "7.4.5",
+    "@nuxt/kit": "3.1.1",
+    "instantsearch.css": "8.0.0",
     "meilisearch": "0.30.0",
-    "vue-instantsearch": "4.6.0"
+    "vue-instantsearch": "^4.8.1"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
-    "@nuxt/schema": "3.0.0",
+    "@nuxt/schema": "^3.1.1",
     "@nuxtjs/eslint-config-typescript": "latest",
     "eslint": "latest",
-    "nuxt": "3.0.0",
+    "nuxt": "^3.1.1",
     "standard-version": "9.5.0"
   },
   "publishConfig": {
