--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-meilisearch",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -34,12 +34,13 @@
     "@nuxt/kit": "3.3.3",
     "instantsearch.css": "8.0.0",
     "meilisearch": "0.32.2",
-    "vue-instantsearch": "4.8.8"
+    "vue-instantsearch": "4.8.9"
   },
   "devDependencies": {
     "@nuxt/module-builder": "latest",
     "@nuxt/schema": "3.3.3",
     "@nuxtjs/eslint-config-typescript": "latest",
+    "@types/node": "18.15.11",
     "eslint": "latest",
     "nuxt": "3.3.3",
     "standard-version": "9.5.0"
