--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "0.13.2",
-    "@nuxt/kit": "3.5.3",
+    "@meilisearch/instant-meilisearch": "0.13.5",
+    "@nuxt/kit": "3.7.0",
     "instantsearch.css": "8.0.0",
-    "meilisearch": "0.33.0",
-    "vue-instantsearch": "4.10.1"
+    "meilisearch": "0.34.1",
+    "vue-instantsearch": "4.10.9"
   },
   "devDependencies": {
     "@nuxt/module-builder": "0.4.0",
-    "@nuxt/schema": "3.5.3",
-    "@nuxtjs/eslint-config-typescript": "latest",
-    "@types/node": "20.2.5",
-    "bumpp": "9.1.1",
-    "eslint": "latest",
-    "nuxt": "3.5.3"
+    "@nuxt/schema": "3.7.0",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@types/node": "20.5.6",
+    "bumpp": "9.2.0",
+    "eslint": "^8.48.0",
+    "nuxt": "3.7.0"
   },
   "publishConfig": {
     "access": "public"
