--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "exports": {
     ".": {
+      "types": "./dist/types.d.ts",
       "import": "./dist/module.mjs",
       "require": "./dist/module.cjs"
     }
@@ -24,26 +25,32 @@
     "prepack": "nuxt-module-build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
-    "docs": "cd docus && pnpm dev",
-    "release": "nuxt-module-build && standard-version && git push --follow-tags && npm publish",
-    "lint": "eslint --ext .js,.ts,.vue"
+    "dev:prepare": "nuxt-module-build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "release": "pnpm lint && pnpm test && bumpp && pnpm publish",
+    "lint": "pnpm lint:all:eslint && pnpm lint:all:prettier",
+    "lint:all:eslint": "pnpm lint:eslint --ext .ts,.js,.mjs,.cjs .",
+    "lint:all:prettier": "pnpm lint:prettier \"{src,test}/**/*.{js,json,ts}\"",
+    "lint:eslint": "eslint --fix",
+    "lint:prettier": "prettier --write --loglevel warn",
+    "test": "vitest run",
+    "test:types": "tsc --noEmit",
+    "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "0.12.0",
-    "@nuxt/kit": "3.4.2",
+    "@meilisearch/instant-meilisearch": "0.13.5",
+    "@nuxt/kit": "3.7.3",
     "instantsearch.css": "8.0.0",
-    "meilisearch": "0.32.3",
-    "vue-instantsearch": "4.8.10"
+    "meilisearch": "0.34.2",
+    "vue-instantsearch": "4.10.11"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "latest",
-    "@nuxt/schema": "3.4.2",
-    "@nuxtjs/eslint-config-typescript": "latest",
-    "@types/node": "18.16.0",
-    "eslint": "latest",
-    "nuxt": "3.4.2",
-    "standard-version": "9.5.0"
+    "@nuxt/module-builder": "0.5.1",
+    "@nuxt/schema": "3.7.3",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@types/node": "20.6.2",
+    "bumpp": "9.2.0",
+    "eslint": "^8.49.0",
+    "nuxt": "3.7.3"
   },
   "publishConfig": {
     "access": "public"
@@ -59,5 +66,6 @@
     "vue-instantsearch",
     "nuxt",
     "module"
-  ]
+  ],
+  "packageManager": "pnpm@8.6.0"
 }
