--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "0.13.5",
+    "@meilisearch/instant-meilisearch": "0.13.6",
     "@nuxt/eslint-config": "^0.2.0",
-    "@nuxt/kit": "3.7.3",
-    "instantsearch.css": "8.0.0",
-    "meilisearch": "0.34.2",
-    "vue-instantsearch": "4.10.11"
+    "@nuxt/kit": "3.7.4",
+    "instantsearch.css": "8.1.0",
+    "meilisearch": "0.35.0",
+    "vue-instantsearch": "4.11.0"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "0.5.1",
-    "@nuxt/schema": "3.7.3",
+    "@nuxt/module-builder": "0.5.2",
+    "@nuxt/schema": "3.7.4",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@types/node": "20.6.2",
+    "@types/node": "20.8.4",
     "bumpp": "9.2.0",
-    "eslint": "^8.49.0",
-    "nuxt": "3.7.3"
+    "eslint": "8.51.0",
+    "nuxt": "3.7.4"
   },
   "publishConfig": {
     "access": "public"
