--- a/docus/package.json
+++ b/docus/package.json
@@ -10,12 +10,12 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@nuxt-themes/docus": "^1.13.1",
-    "@nuxt/devtools": "^0.6.7",
-    "@nuxt/eslint-config": "^0.1.1",
-    "@nuxtjs/plausible": "^0.2.1",
-    "@types/node": "^20.4.0",
-    "eslint": "^8.44.0",
-    "nuxt": "^3.6.2"
+    "@nuxt-themes/docus": "1.15.0",
+    "@nuxt/devtools": "0.6.7",
+    "@nuxt/eslint-config": "0.2.0",
+    "@nuxtjs/plausible": "0.2.3",
+    "@types/node": "20.8.6",
+    "eslint": "8.51.0",
+    "nuxt": "3.7.4"
   }
 }
