--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-meilisearch",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "@meilisearch/instant-meilisearch": "0.13.6",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/kit": "3.7.4",
+    "defu": "^6.1.2",
     "instantsearch.css": "8.1.0",
     "meilisearch": "0.35.0",
     "vue-instantsearch": "4.11.0"
