--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@meilisearch/instant-meilisearch": "0.13.6",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/kit": "3.7.4",
-    "defu": "^6.1.2",
+    "defu": "6.1.2",
     "instantsearch.css": "8.1.0",
     "meilisearch": "0.35.0",
     "vue-instantsearch": "4.11.0"
