--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "0.13.6",
-    "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/eslint-config": "0.2.0",
     "@nuxt/kit": "3.7.4",
+    "@nuxt/ui": "2.9.0",
     "defu": "6.1.2",
     "instantsearch.css": "8.1.0",
     "meilisearch": "0.35.0",
@@ -44,7 +45,7 @@
   "devDependencies": {
     "@nuxt/module-builder": "0.5.2",
     "@nuxt/schema": "3.7.4",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@nuxtjs/eslint-config-typescript": "12.1.0",
     "@types/node": "20.8.4",
     "bumpp": "9.2.0",
     "eslint": "8.51.0",
@@ -53,7 +54,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://nuxt-meilisearch-docs.vercel.app/",
+  "homepage": "https://nuxt-meilisearch.vercel.app",
   "directories": {
     "doc": "docs",
     "example": "playground"
