--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
   },
   "devDependencies": {
     "@nuxt/module-builder": "0.5.2",
-    "@nuxt/schema": "3.7.4",
+    "@nuxt/schema": "3.8.0",
+    "@nuxt/ui": "2.9.0",
     "@nuxtjs/eslint-config-typescript": "12.1.0",
-    "@types/node": "20.8.4",
+    "@types/node": "20.8.9",
     "bumpp": "9.2.0",
-    "eslint": "8.51.0",
+    "eslint": "8.52.0",
     "nuxt": "3.8.0"
   },
   "publishConfig": {
