--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,28 @@
 {
   "extends": "./.nuxt/tsconfig.json",
   // "exclude": ["playground", "dist"]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "skipLibCheck": true,
+    "strict": false,
+    "allowJs": true,
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "types": [
+      "node",
+      "@nuxt/kit"
+    ],
+    "paths": {
+      "#app": [
+        "./node_modules/nuxt/dist/app"
+      ]
+    }
+  },
+  "include": [
+    "src"
+  ]
 }
