--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-meilisearch",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
       "require": "./dist/module.cjs"
     }
   },
-  "main": "./dist/module.cjs",
+  "main": "./dist/module.mjs",
   "types": "./dist/types.d.ts",
   "files": [
     "dist"
