--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
   "root": true,
-  "extends": ["@nuxt/eslint-config"]
+  "extends": [
+    "@nuxtjs",
+    "@nuxtjs/eslint-config-typescript"
+  ]
 }
