--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "0.17.0",
-    "@nuxt/eslint-config": "0.2.0",
-    "@nuxt/kit": "3.10.3",
-    "defu": "6.1.4",
-    "instantsearch.css": "8.1.0",
-    "meilisearch": "0.38.0",
-    "vue-instantsearch": "4.14.0"
+    "@meilisearch/instant-meilisearch": "^0.17.0",
+    "@nuxt/kit": "^3.11.2",
+    "instantsearch.css": "^8.1.0",
+    "meilisearch": "^0.38.0",
+    "vue-instantsearch": "^4.15.0"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "0.5.5",
-    "@nuxt/schema": "3.10.3",
-    "@nuxt/ui": "2.14.2",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
-    "@types/node": "20.11.28",
-    "bumpp": "9.4.0",
-    "eslint": "8.57.0",
-    "nuxt": "3.10.3"
+    "@nuxt/module-builder": "^0.5.5",
+    "@nuxt/schema": "^3.11.2",
+    "@nuxt/ui": "^2.15.1",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@types/node": "^20.12.5",
+    "bumpp": "^9.4.0",
+    "eslint": "^9.0.0",
+    "nuxt": "^3.11.2",
+    "defu": "^6.1.4",
+    "@nuxt/eslint-config": "^0.3.1"
   },
   "publishConfig": {
     "access": "public"
@@ -66,5 +66,5 @@
     "nuxt",
     "module"
   ],
-  "packageManager": "pnpm@8.6.0"
+  "packageManager": "pnpm@8.15.3"
 }
