--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "nuxt-meilisearch",
+  "type": "module",
   "version": "1.2.15",
+  "packageManager": "pnpm@8.15.3",
+  "author": "Alex Duval",
   "license": "MIT",
+  "homepage": "https://nuxt-meilisearch.vercel.app",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xlanex6/nuxt-meilisearch.git"
   },
-  "author": "Alex Duval",
   "contributors": [],
-  "type": "module",
+  "keywords": [
+    "meilisearch",
+    "search",
+    "vue-instantsearch",
+    "nuxt",
+    "module"
+  ],
   "exports": {
     ".": {
       "types": "./dist/types.d.ts",
@@ -27,10 +36,11 @@
     "dev:build": "nuxi build playground",
     "dev:prepare": "nuxt-module-build --stub && nuxt-module-build prepare && nuxi prepare playground",
     "release": "pnpm lint && bumpp && pnpm publish",
-    "lint": "eslint .",
     "test": "vitest run",
     "test:types": "tsc --noEmit",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "^0.17.0",
@@ -40,31 +50,23 @@
     "vue-instantsearch": "^4.15.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.12.2",
+    "@nuxt/eslint-config": "^0.3.1",
     "@nuxt/module-builder": "^0.5.5",
     "@nuxt/schema": "^3.11.2",
     "@nuxt/ui": "^2.15.1",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@types/node": "^20.12.5",
     "bumpp": "^9.4.0",
-    "eslint": "^9.0.0",
-    "nuxt": "^3.11.2",
     "defu": "^6.1.4",
-    "@nuxt/eslint-config": "^0.3.1"
+    "eslint": "^9.0.0",
+    "nuxt": "^3.11.2"
   },
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "https://nuxt-meilisearch.vercel.app",
   "directories": {
     "doc": "docs",
     "example": "playground"
-  },
-  "keywords": [
-    "meilisearch",
-    "search",
-    "vue-instantsearch",
-    "nuxt",
-    "module"
-  ],
-  "packageManager": "pnpm@8.15.3"
+  }
 }
