--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,25 +2,25 @@
   "extends": "./.nuxt/tsconfig.json",
   // "exclude": ["playground", "dist"]
   "compilerOptions": {
-    "baseUrl": ".",
     "target": "ESNext",
+    "baseUrl": ".",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "skipLibCheck": true,
-    "strict": false,
-    "allowJs": true,
-    "noEmit": true,
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "types": [
-      "node",
-      "@nuxt/kit"
-    ],
     "paths": {
       "#app": [
         "./node_modules/nuxt/dist/app"
       ]
-    }
+    },
+    "resolveJsonModule": true,
+    "types": [
+      "node",
+      "@nuxt/kit"
+    ],
+    "allowJs": true,
+    "strict": false,
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "include": [
     "src"
