--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nuxt-meilisearch",
   "type": "module",
   "version": "1.2.15",
-  "packageManager": "pnpm@8.15.3",
   "author": "Alex Duval",
   "license": "MIT",
   "homepage": "https://nuxt-meilisearch.vercel.app",
@@ -43,24 +42,24 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@meilisearch/instant-meilisearch": "^0.17.0",
-    "@nuxt/kit": "^3.11.2",
-    "instantsearch.css": "^8.1.0",
-    "meilisearch": "^0.38.0",
-    "vue-instantsearch": "^4.15.0"
+    "@meilisearch/instant-meilisearch": "0.18.1",
+    "@nuxt/kit": "3.11.2",
+    "instantsearch.css": "8.1.0",
+    "meilisearch": "0.40.0",
+    "vue-instantsearch": "4.16.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.12.2",
-    "@nuxt/eslint-config": "^0.3.1",
-    "@nuxt/module-builder": "^0.5.5",
-    "@nuxt/schema": "^3.11.2",
-    "@nuxt/ui": "^2.15.1",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@types/node": "^20.12.5",
-    "bumpp": "^9.4.0",
-    "defu": "^6.1.4",
-    "eslint": "^9.0.0",
-    "nuxt": "^3.11.2"
+    "@antfu/eslint-config": "2.18.1",
+    "@nuxt/eslint-config": "0.3.13",
+    "@nuxt/module-builder": "0.6.0",
+    "@nuxt/schema": "3.11.2",
+    "@nuxt/ui": "2.16.0",
+    "@nuxtjs/eslint-config-typescript": "12.1.0",
+    "@types/node": "20.12.12",
+    "bumpp": "9.4.1",
+    "defu": "6.1.4",
+    "eslint": "9.3.0",
+    "nuxt": "3.11.2"
   },
   "publishConfig": {
     "access": "public"
