chore: enable ESLint warning emission

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "failOnWarn": false,
     "emitError": false,
-    "failOnError": false
+    "failOnError": false,
+    "emitWarning": true
   }
 }
