--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-meilisearch",
   "type": "module",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "author": "Alex Duval",
   "license": "MIT",
   "homepage": "https://nuxt-meilisearch.vercel.app",
@@ -33,13 +33,12 @@
     "prepack": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "dev:build": "nuxi build playground",
-    "dev:prepare": "nuxt-module-build --stub && nuxt-module-build prepare && nuxi prepare playground",
-    "release": "pnpm lint && bumpp && pnpm publish",
-    "test": "vitest run",
-    "test:types": "tsc --noEmit",
-    "test:watch": "vitest watch",
+    "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
+    "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
   },
   "dependencies": {
     "@meilisearch/instant-meilisearch": "0.18.1",
@@ -49,17 +48,20 @@
     "vue-instantsearch": "4.16.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "2.18.1",
+    "defu": "6.1.4",
+    "@nuxt/ui": "2.16.0",
+    "@nuxt/devtools": "1.3.1",
     "@nuxt/eslint-config": "0.3.13",
     "@nuxt/module-builder": "0.6.0",
     "@nuxt/schema": "3.11.2",
-    "@nuxt/ui": "2.16.0",
-    "@nuxtjs/eslint-config-typescript": "12.1.0",
+    "@nuxt/test-utils": "3.13.0",
     "@types/node": "20.12.12",
-    "bumpp": "9.4.1",
-    "defu": "6.1.4",
+    "changelogen": "0.5.5",
     "eslint": "9.3.0",
-    "nuxt": "3.11.2"
+    "nuxt": "3.11.2",
+    "typescript": "latest",
+    "vitest": "1.6.0",
+    "vue-tsc": "2.0.19"
   },
   "publishConfig": {
     "access": "public"
