--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "moduleResolution": "node",
-    "esModuleInterop": true
-  }
+    "types": ["@nuxt/types", "@types/node"]
+  },
+  "exclude": ["node_modules"]
 }
