fix: update types configuration in package.json and correct import path in module.ts

--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     }
   },
   "main": "./dist/module.mjs",
-  "types": "./dist/types.d.ts",
+  "typesVersions": {
+    "*": {
+      ".": [
+        "./dist/types.d.mts"
+      ]
+    }
+  },
   "files": [
     "dist"
   ],
